# app/Http/Requests/Api/V1/OrderStoreRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Requests\Api\V1;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class OrderStoreRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'quantity' => ['required', 'integer'],
+            'orderable_id' => ['required'],
+        ];
+    }
+}
